fix spacing on narrow page

--- a/public/assets/css/docs.css
+++ b/public/assets/css/docs.css
@@ -884,3 +884,9 @@ form.well {
 .navbar-fixed-top .brand { 
   color:#ccc;
  }
+
+@media (min-width: 980px) {
+  div.container div.row {
+    padding-top:40px;
+ }
+}
